--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Surya Wijayani</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Diganti Wijayani</a></h1>
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
@@ -61,7 +61,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Surya Wijayani</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -262,7 +262,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
               </div>
             </div>
           </div>
