--- a/about.html
+++ b/about.html
@@ -45,8 +45,8 @@
               <ul>
                 <li><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li class="active"><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
+                <li><a href="contact.html"><span><small>04</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -146,22 +146,22 @@
           			<h2 class="mb-4">Education</h2>
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Master Degree in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Multimedia Design<span> - POLITEKNIK NEGERI MEDIA KREATIF</span> </h4>
+	          				<!-- <p class="location">Germany - Berlin</p> -->
           				</div>
-          				<div class="year">
-          					<p>2013 - 2014</p>
-          				</div>
+          				<!-- <div class="year"> -->
+          					<!-- <p>2013 - 2014</p> -->
+          				<!-- </div> -->
           			</div>
 
           			<div class="exp-wrap py-4">
           				<div class="desc">
-	          				<h4>Bacheclor of Science in Computer Science<span> - Harvard University</span> </h4>
-	          				<p class="location">Germany - Berlin</p>
+	          				<h4>Broadcasting TV<span> - SMKN 48 JAKARTA</span> </h4>
+	          				<!-- <p class="location">Germany - Berlin</p> -->
           				</div>
-          				<div class="year">
-          					<p>2009 - 2012</p>
-          				</div>
+          				<!-- <div class="year"> -->
+          					<!-- <p>2009 - 2012</p> -->
+          				<!-- </div> -->
 								</div>
 								
           		</div>
@@ -184,43 +184,21 @@
 							</div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>jQuery</h4>
+									<h4>Illustartor</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-									    <span>60%</span>
+									    <span>70%</span>
 									  	</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap">
-									<h4>HTML5</h4>
+									<h4>Premiere</h4>
 									<div class="progress">
 									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
 									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-									    <span>85%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-								<div class="progress-wrap">
-									<h4>CSS3</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									    <span>90%</span>
-									  	</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap">
-									<h4>WordPress</h4>
-									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
 									    <span>70%</span>
 									  	</div>
 									</div>
@@ -228,11 +206,11 @@
 							</div>
 							<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 								<div class="progress-wrap">
-									<h4>SEO</h4>
+									<h4>Final Cut</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-									    <span>80%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									    <span>70%</span>
 									  	</div>
 									</div>
 								</div>
@@ -247,14 +225,12 @@
             <div class="col-md-5 text-center">
               <div class="ftco-footer-widget mb-5">
                 <ul class="ftco-footer-social list-unstyled">
-                  <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                  <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                  <li class="ftco-animate"><a href="https://www.instagram.com/blackpayper/" target="_blank"><span class="icon-instagram"></span></a></li>
                 </ul>
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">info@email.com</a></p>
+                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
               </div>
             </div>
           </div>
