--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Diganti Wijayani</a></h1>
+              <h1 class="mb-4"><a href="index.html" class="logo">Surya Wijayani</a></h1>
               <ul>
                 <li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
                 <li><a href="about.html"><span><small>02</small>Resume</span></a></li>
-                <li><a href="services.html"><span><small>03</small>Services</span></a></li>
-                <li><a href="portfolio.html"><span><small>04</small>Portfolio</span></a></li>
-                <li><a href="contact.html"><span><small>06</small>Contact</span></a></li>
+                <li><a href="portfolio.html"><span><small>03</small>Portfolio</span></a></li>
+                <li><a href="contact.html"><span><small>04</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
