ganti informasi lagi

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
               <p><span>Phone:</span> <a href="#"><br>082187986712</a></p>
             </div>
             <div class="col-md-4">
-              <p><span>Email:</span> <a href="mailto:kentanggorengbalado@gmail.com">kentanggorengbalado@gmail.com</a></p>
+              <p><span>Email:</span> <a href="mailto:widjajarya@gmail.com"><br>widjajarya@gmail.com</a></p>
             </div>
             <div class="col-md-4">
               <p><span>Website:</span> <a href="#"><br>blackpayper.github.io</a></p>
@@ -99,7 +99,7 @@
               </div>
               <div class="ftco-footer-widget">
                 <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
+                <p class="h3 email"><a href="#">widjajarya@gmail.com</a></p>
               </div>
             </div>
           </div>
