--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">Saya Berasal Dari Jakarta, Indonesia</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Seorang Designer Dan Operator</h1>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}">Seorang Graphic Designer</h1>
               </div>
             </div>
           </div>
@@ -112,7 +112,7 @@
                     <li><a href="https://www.instagram.com/blackpayper/" target="_blank"><span class="icon-instagram"></span></a></li>                    
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">kentanggorengbalado@gmail.com</a></p>
+                  <p>Email: <a href="#">widjajarya@gmail.com</a></p>
                   <p>Phone: <a href="#">082187986712</a></p>
                 </div>
               </div>
@@ -132,7 +132,10 @@
           <div class="row">
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-layers"></span></div>
+                <div class="icon mb-3">
+                  <!-- <span class="icon-layers"></span> -->
+                  <img src="./images/photoshop.jpg" alt="">
+                </div>
                 <div class="media-body">
                   <h3 class="heading">Adobe Photoshop</h3>
                 </div>
@@ -140,7 +143,10 @@
             </div>
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-gears"></span></div>
+                <div class="icon mb-3">
+                  <!-- <span class="icon-gears"></span> -->
+                  <img src="./images/illustrator.jpg" alt="">
+                </div>
                 <div class="media-body">
                   <h3 class="heading">Adobe Illustrator</h3>
                 </div>
@@ -148,7 +154,10 @@
             </div>
             <div class="col-md-4 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services p-3 py-4 d-block text-center">
-                <div class="icon mb-3"><span class="icon-code"></span></div>
+                <div class="icon mb-3">
+                  <!-- <span class="icon-code"></span> -->
+                  <img src="./images/premiere.jpg" alt="">
+                </div>
                 <div class="media-body">
                   <h3 class="heading">Adobe Premiere</h3>
                 </div>
@@ -260,8 +269,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">widjajarya@gmail.com</a></p>
               </div>
             </div>
           </div>
