--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="colorlib-navbar-brand">
-                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Beckham Muff</a>
+                <a class="colorlib-logo" href="index.html"><span class="logo-img" style="background-image: url(images/person_1.jpg);"></span>Surya Wijayani</a>
               </div>
               <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
             </div>
@@ -85,7 +85,7 @@
                     <li><a href="https://www.instagram.com/blackpayper/" target="_blank"><span class="icon-instagram"></span></a></li>
                   </ul>
                   <h5>Contact me here!</h5>
-                  <p>Email: <a href="#">kentanggorengbalado@gmail.com</a></p>
+                  <p>Email: <a href="#">widjajarya@gmail.com</a></p>
                   <p>Phone: <a href="#">082187986712</a></p>
                 </div>
               </div>
@@ -175,9 +175,9 @@
 								<div class="progress-wrap">
 									<h4>Photoshop</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
-									    <span>75%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="70"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+									    <span>70%</span>
 									  	</div>
 									</div>
 								</div>
@@ -186,9 +186,9 @@
 								<div class="progress-wrap">
 									<h4>Illustartor</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
-									    <span>70%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+									    <span>85%</span>
 									  	</div>
 									</div>
 								</div>
@@ -197,9 +197,9 @@
 								<div class="progress-wrap">
 									<h4>Premiere</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-									    <span>70%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
+									    <span>80%</span>
 									  	</div>
 									</div>
 								</div>
@@ -208,9 +208,9 @@
 								<div class="progress-wrap">
 									<h4>Final Cut</h4>
 									<div class="progress">
-									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-									  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-									    <span>70%</span>
+									 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="75"
+									  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+									    <span>75%</span>
 									  	</div>
 									</div>
 								</div>
@@ -229,8 +229,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">widjajarya@gmail.com</a></p>
               </div>
             </div>
           </div>
