--- a/portfolio.html
+++ b/portfolio.html
@@ -184,8 +184,8 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
-                <p class="h3 email"><a href="#">kentanggorengbalado@gmail.com</a></p>
+                <h2 class="mb-3">Contact Me</h2>
+                <p class="h3 email"><a href="#">widjajarya@gmail.com</a></p>
               </div>
             </div>
           </div>
