--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
                 </ul>
               </div>
               <div class="ftco-footer-widget">
-                <h2 class="mb-3">Contact Us</h2>
+                <h2 class="mb-3">Contact Me</h2>
                 <p class="h3 email"><a href="#">widjajarya@gmail.com</a></p>
               </div>
             </div>
